2025-05-08T01:45:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14896825195 # 963
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-08
* notice: last 14d: unq all: 26 76
* notice: prev accum: outdated-unq outdated-all / unq all: 4127 8785 / 4177 8861
* notice: next accum: outdated-unq outdated-all / unq all: 4127 8785 / 4177 8862
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +4 +6 -0 -0 / 4 6
* notice: removed / changed dates: [] / [2025-04-24 2025-05-07]

2025-05-07T12:44:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14883677009 # 962
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-07
* notice: last 14d: unq all: 26 76
* notice: prev accum: outdated-unq outdated-all / unq all: 4126 8783 / 4173 8856
* notice: next accum: outdated-unq outdated-all / unq all: 4127 8785 / 4177 8861
* notice: prev exec diff / last date diff / accum: unq all: +4 +5 -0 -0 / +4 +5 -0 -0 / 4 5
* notice: removed / changed dates: [2025-04-23] / [2025-05-07]

2025-05-07T01:45:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14873313656 # 961
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-07
* notice: last 14d: unq all: 26 72
* notice: prev accum: outdated-unq outdated-all / unq all: 4119 8774 / 4173 8855
* notice: next accum: outdated-unq outdated-all / unq all: 4126 8783 / 4173 8856
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2025-04-22] / [2025-04-23 2025-05-06]

2025-05-06T12:44:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14859961175 # 960