@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-05-08T01:45:55Z",
-  "count" : 5,
+  "timestamp" : "2025-05-08T12:42:21Z",
+  "count" : 4,
   "count_minmax" : [ 1, 6 ],
-  "count_decinc" : [ -1, +6 ],
-  "uniques" : 4,
+  "count_decinc" : [ -2, +6 ],
+  "uniques" : 3,
   "uniques_minmax" : [ 1, 4 ],
-  "uniques_decinc" : [ -0, +4 ]
+  "uniques_decinc" : [ -1, +4 ]
 }
