@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-05-08T01:45:55Z",
+  "timestamp" : "2025-05-08T12:42:21Z",
   "count_outdated" : 8785,
   "uniques_outdated" : 4127,
-  "count" : 8862,
-  "uniques" : 4177,
+  "count" : 8863,
+  "uniques" : 4178,
   "clones" : [
     {
       "timestamp": "2025-04-24T00:00:00Z",
-      "count": 5,
+      "count": 4,
       "count_minmax": [ 1, 6 ],
-      "count_decinc": [ 1, 6 ],
-      "uniques": 4,
+      "count_decinc": [ 2, 6 ],
+      "uniques": 3,
       "uniques_minmax": [ 1, 4 ],
-      "uniques_decinc": [ 0, 4 ]
+      "uniques_decinc": [ 1, 4 ]
     },
     {
       "timestamp": "2025-04-25T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 4,
       "uniques_minmax": [ 4, 4 ],
       "uniques_decinc": [ 0, 4 ]
+    },
+    {
+      "timestamp": "2025-05-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
